Se eliminaron imagenes que no se van a usar, se eliminaron secciones que tampoco van a estar el la página de inicio

--- a/css/styles.css
+++ b/css/styles.css
@@ -5,10 +5,12 @@
 	font-family: 'Josefin Sans', sans-serif;
 	box-sizing: border-box;
 }
+
+
 .hero{
 	height: 100vh;
 	width: 100%;
-	background-color: #2c2c2c;
+	background-image: url(../imgs/hero1.jpeg);
 	background-size: cover;
 	background-position: center;
 }
@@ -18,14 +20,11 @@ nav{
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	padding-top: 45px;
+	padding-top: 30px;
 	padding-left: 8%;
-	padding-right: 8%;
+	padding-bottom: 35px;
 }
 
-span{
-	color: #e3dacd;
-}
 
 nav ul li{
 	list-style-type: none;
@@ -33,14 +32,14 @@ nav ul li{
 	padding: 10px  25px;
 }
 nav ul li a{
-	color: #e3dacd;
+	color: #2c2c2c;
 	text-decoration: none;
 	font-weight: bold;
 	text-transform: capitalize;
 }
 
 nav ul li a:hover{
-	color: #3b8979;
+	color: #357b6d;
 	transition: .4s;
 }
 
@@ -50,84 +49,40 @@ nav ul li a:hover{
 	left:8%;
 	transform: translateY(-50%);
 }
+
 h1{
-	color: #e3dacd;
+	color: #2c2c2c;
 	margin: 20px 0px 20px;
 	font-size: 75px;
 }
 h3{
-	color: #e3dacd;
+	color: #357b6d;
 	font-size: 25px;
-	margin-bottom: 50px;
-}
-h4{
-	color: #d37b31;
-	letter-spacing: 2px;
-	font-size: 20px;
+	margin-bottom: 20px 0px 20px 0px;
 }
 
 .btnCV{
+	display: inline-block;
 	background-color: transparent;
-	color: #3b8979;
+	color: #357b6d;
+	width: 150px;
 	text-decoration: none;
-	border: 2px solid #3b8979;
+	text-align: center;
+	border: 2px solid #357b6d;
 	font-weight: bold;
-	padding: 10px 25px;
-	border-radius: 10px;
-	transition: transform .4s; 
+	padding: 10px 15px;
+	transition: transform .4s;
 }
 .btnCV:hover{
-	background-color:#3b8979;
-	color: white;
-	transform: scale(1.2);
+	background-color:#357b6d;
+	color: #E7E7E3;
 }
 
-.about{
-	width: 100%;
-	padding: 100px 0px;
-	background-color: #e3dacd;
-}
-
-.about img{
-	height: auto;
-	width: 430px;
-}
-
-.about-text{
+p{
+	color: #2c2c2c;
 	width: 550px;
-}
-
-.main{
-	width: 1130px;
-	max-width: 95%;
-	margin: 0 auto;
-	display: flex;
-	align-items: center;
-	justify-content: space-around;
-}
-.about-text h2{
-	color: #d37b31;
-	font-size: 75px;
-	text-transform: capitalize;
-	margin-bottom: 20px;
-}
-
-.about-text h5{
-	color: #2c2c2c;
-	letter-spacing: 2px;
-	font-size: 22px;
-	margin-bottom: 25px;
-	text-transform: capitalize;
-}
-
-.about-text p{
-	color: #2c2c2c;
 	letter-spacing: 1px;
 	line-height: 28px;
 	font-size: 18px;
-	margin-bottom: 45px;
+	margin: 20px 0px 20px;
 }
-
-d37b31
-2c2c2c
-3b8979
