--- a/css/aboutMe.css
+++ b/css/aboutMe.css
@@ -234,3 +234,103 @@ nav ul li a:hover{
     margin-left: 40.5%;
     margin-bottom: 30px;
 }
+
+.work p{
+    margin-top: 3px;
+    color: #2c2c2c;
+}
+
+.work h4{
+    color: #357b6d;
+}
+
+.work span{
+    color: #2c2c2c;
+}
+
+.work h6{
+    margin-top: 3px;
+    color: #2c2c2c;
+}
+
+.certificaciones{
+    height: 100vh;
+	width: 100%;
+    /* background-color: #E7E7E3; */
+    padding: 40px 0;
+}
+
+.certificaciones h3{
+    font-size: 20px;
+	width: 1130px;
+    margin-left: 10%;
+    margin-top: 80px;
+    margin-bottom: 20px;
+	text-align: center;
+}
+
+.boxCurso{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	/* min-height: 400px; */
+}
+
+.curso{
+	height: 100px;
+	width: 300px;
+	padding: 20px 35px;
+	margin: 50px;
+	position: relative;
+	overflow: hidden;
+	text-align: center;
+    box-shadow: 5px 10px 18px #d6d6d6;
+}
+
+.curso h4{
+    color: #2c2c2c;
+}
+
+.curso h6{
+    color: #2c2c2c;
+    font-size: 12px;
+    margin-top: 6px;
+}
+
+.curso span{
+    color: #2c2c2c;
+}
+
+.curso1{
+	height: 200px;
+	width: 600px;
+	padding: 20px 35px;
+	margin: 50px;
+	position: relative;
+	overflow: hidden;
+	text-align: center;
+    box-shadow: 5px 10px 18px #d6d6d6;
+}
+
+.curso1 p {
+    margin-top: 6px;
+    color: #2c2c2c;
+    font-size: 16px;
+}
+
+.curso1 h6{
+    margin-top: 3px;
+    color: #2c2c2c;
+    font-size: 18px;
+}
+
+.footer{
+    margin-top: 100px;
+}
+
+.footer p{
+    text-align: center;
+padding-bottom: 20px;
+}
+
+
