--- a/css/styles.css
+++ b/css/styles.css
@@ -93,3 +93,10 @@ p{
 	/* background-color: #191919; */
 }
 
+.social{
+	margin-top: 4%;
+	margin-left: 17%;
+	width: 100%;
+	margin-right: 2%;
+}
+
