--- a/css/aboutMe.css
+++ b/css/aboutMe.css
@@ -37,7 +37,7 @@ nav ul li a:hover{
 .hero{
 	height: 100vh;
 	width: 100%;
-    background-image: url(../imgs/hero/hero.jpeg);
+    background-image: url(../imgs/hero/heroX.jpeg);
 	background-size: cover;
 	background-position: center;
 }
@@ -159,7 +159,7 @@ nav ul li a:hover{
 .softSkills{
     height: 100vh;
 	width: 100%;
-    /* background-color: #E7E7E3; */
+    background-color: #EFEFEF;
     padding: 40px 0;
 }
 
@@ -256,7 +256,7 @@ nav ul li a:hover{
 .certificaciones{
     height: 100vh;
 	width: 100%;
-    /* background-color: #E7E7E3; */
+    background-color: #EAEAEA;
     padding: 40px 0;
 }
 
@@ -322,6 +322,17 @@ nav ul li a:hover{
     margin-top: 3px;
     color: #2c2c2c;
     font-size: 18px;
+}
+
+
+.referenciasSection h3{
+	color: #2c2c2c;
+	font-size: 20px;
+	width: 1130px;
+    margin-left: 10%;
+    margin-top: 80px;
+    margin-bottom: 20px;
+	text-align: center;
 }
 
 .footer{
